--- a/portal-back.properties
+++ b/portal-back.properties
@@ -1,4 +1,6 @@
 quarkus.application.name=portal-back
 
-quarkus.http.port=8080
-quarkus.http.root-path=/api/portal
+quarkus.http.auth.permission.authenticated.paths=/*
+quarkus.http.auth.permission.authenticated.policy=authenticated
+quarkus.http.auth.permission.dev-ui.paths=/api/portal/q/*
+quarkus.http.auth.permission.dev-ui.policy=permit
