--- a/portal-back-dev.properties
+++ b/portal-back-dev.properties
@@ -1,3 +1,6 @@
-quarkus.application.name=portal-back
+quarkus.application.name=portal-back-dev
 
-quarkus.http.port=8081
+quarkus.http.auth.permission.authenticated.paths=/*
+quarkus.http.auth.permission.authenticated.policy=authenticated
+quarkus.http.auth.permission.dev-ui.paths=/api/portal/q/*
+quarkus.http.auth.permission.dev-ui.policy=permit
