--- a/portal-back-dev.properties
+++ b/portal-back-dev.properties
@@ -4,3 +4,5 @@ quarkus.http.auth.permission.authenticated.paths=/*
 quarkus.http.auth.permission.authenticated.policy=authenticated
 quarkus.http.auth.permission.dev-ui.paths=/api/portal/q/*
 quarkus.http.auth.permission.dev-ui.policy=permit
+
+message=Hello dev world!
